<?xml version="1.0"?>
<package format="2">
    <name>rtioms_recovery_behaviors</name>
    <version>1.16.7</version>
    <description>

        This package provides a backward_recovery behavior for the navigation stack that 
        attempts to clear space by performing a backward motion of the robot(0.2) meter.

    </description>
    <author>kkraman</author>
    
    <maintainer email="kkraman02@gmail.com">kkraman</maintainer>
    <maintainer email="saint@ntut.edu.tw">saint</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>S

    <build_depend>angles</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/rtioms_plugin.xml" />
    </export>

</package>
